2007-09-11  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl (Version): Support exotic version number like
	foo-R31b.tar.gz

	* bin/cygbuild.sh
	- Fix "perl: warning: Setting locale failed" by defininf LC_ALL=C
	  in suitable places.
	(CygbuildMakefileRunInstallPythonMain): Set
	prefix to /usr, not /usr/share. Rewrote input argument
	handling to use shift and $@.
	(CygbuildCmdInstallCheckDirStructure): Warn about deprecated
	X11R6 directory.
	(CygbuildVersionInfo): Support exotic version number like
	foo-R31b.tar.gz
	(CygbuildBootVariablesGlobalEtcMain): Check GBS compat and do
	not require ETC to be installed.
	(CygbuildCmdInstallCheckDirEmpty): New.
	(CygbuildVersionInfo): Greatly simplified the version explode
	code.
	(CygbuildIsNumberLike): Relax regexp not to include leading anchor.
	(CygbuildCmdInstallCheckReadme): README file name checking
	simplified.
	(CygbuildCommandMain): Move `CygbuildDefineGlobalScript'
	to the beginning.
	(CygbuildCmdBuildStdMakefile): Renamed, was
	`CygbuildCmdBuildMainMakefile'
	(CygbuildCmdPrepMain): Move `CygbuildCmdPrepPatch' call inside
	`CygbuildCmdPrepIsUnpacked'.
	(CygbuildDefineGlobalScript): Moved initialization of variables
	here.
	(CygbuildHelpSourcePackage): Message improved for no-build-source.
	(CygbuildSrcDirLocation): Improved recognition.

2007-09-10  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckSymlinks); New.

2007-09-07  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	- Moved many function to the beginning as "primitives"
	- Added initial support to run program under Linux
	(CygbuildPerlModuleLocation): Check
	'in place installation'. If user has just unpacked the sources
	or uses a VCS checkout, then determine the Perl library location.
	(CygbuildBootVariablesGlobal): New variable
	CYGBUILD_PERL_MODULE_NAME
	(CygbuildBootVariablesGlobalCacheSet): New.
	(CygbuildBootVariablesGlobalCacheMain): New.
	(CygbuildBootVariablesGlobalShareSet): New.