@@ -29,6 +29,7 @@
 AWK=/usr/bin/awk
 BASH=/bin/bash
 BASHX="/bin/bash -x"
+BZIP=/usr/bin/bzip2
 CAT=/usr/bin/cat
 CP=/bin/cp
 DIFF=/usr/bin/diff
